@@ -2,6 +2,12 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header $
 
+*less-445-r1.ebuild (10 Nov 2011)
+
+  10 Nov 2011; Martin Väth <martin@mvath.de>
+  Follow revision upgrade from gentoo: support pcre
+  Put keyfiles into ${EPREFIX}/etc/less subdirectories
+
 *less-445.ebuild (28 Oct 2011)
 
   28 Oct 2011; Martin Väth <martin@mvath.de>
